# HGDL

./: .HGDL.py.swp  .gitattributes  .gitignore  .hgdl.py.swp  .newton.py.swp  AUTHORS.rst  CITATION.cff  Examples.ipynb  Examples.py  HGDL.py  HXDY.ipynb  HXDY.py  LEGAL.md  LICENSE  MANIFEST.in  README.md  README.rst  bump_function.ipynb  clean.sh  cleanUp.sh  codecov.yml  conda_reqs.txt  documentation.ipynb  global.ipynb  hgdl.py  license.txt  newton.py  out  pyproject.toml  requirements.txt  results.py  rosenbrock.py  scheduler.json  schwefel.py  setup.cfg  setup.py  sklearn_example.ipynb  tasks.txt  test.py  test_hgdl.py  (+4 more)
.github/workflows/: HGDL-CI.yml
Examples/: Rosenbrock.ipynb
Global/: gaussian.py  genetic.py  run_global.py
Local/: .run_local.py.swp  bump.py  newton.py  run_local.py  scipy_minimize.py  scipy_opt.py
docs/: documentation.ipynb
docs/source/: conf.py  index.md
examples/: 01_basic_usage.ipynb  02_understanding_hgdl_args.ipynb  03_basic_dashboard.ipynb  11_bump_function.ipynb  12_global.ipynb  13_newton.ipynb  21_speed_testing.ipynb  Newton.ipynb  __init__.py  bump_function.ipynb  global.ipynb  gradient_descent.ipynb  rosenbrock_constrained.ipynb  scheduler.json  schwefel_constrained.ipynb  schwefel_run.py  schwefel_test.ipynb
hgdl/: README.md  README.txt  __init__.py  _version.py  bump.py  constraints.py  glob.py  hgdl.py  hgdl_dask_temp.py  hgdl_functions.py  hgdl_old.py  info.py  local.py  meta_data.py  misc.py  optima.py  results.py  rosenbrock.py  support_functions.py  test_functions.py
hgdl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hgdl/data/: meta_data.py
hgdl/global_methods/: gaussian.py  genetic.py  global_optimizer.py  run_global.py
hgdl/local_methods/: bump_function.py  dNewton.py  local_optimizer.py  newton.py  run_local.py  scipy_minimize.py
hgdl/result/: __init__.py  optima.py
paper/: fit.py
paper/bio/: fit.py  (+11 more)
tests/: .schwefel_run.py.swp  Newton.ipynb  big_func.py  class_test.py  delay_best_rosenbrock.py  delay_final_rosenbrock.py  delay_latest_rosenbrock.py  delayed_rosenbrock.py  global.ipynb  mpi_test.py  rosenbrock.py  scheduler.json  schwefel_def.py  schwefel_run.py  support_functions.py  test_functions.py  test_non_diff.py  test_rosenbrock.py  test_schwefel.py  test_schwefel_BFGS.py  test_schwefel_CG.py
(+50 files in other folders)
